--- a/Crux.Structs.User.html
+++ b/Crux.Structs.User.html
@@ -8,7 +8,7 @@
     <meta name="project" content="Crux vdev">
     <title>Crux.Structs.User — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-54fe6ae213.js"></script>
+    <script src="dist/sidebar_items-da6452be3a.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
   </head>
@@ -92,6 +92,12 @@ Crux.Structs.User          <a href="https://github.com/SpaceEEC/crux_structs/blo
     </h2>
 <div class="summary-row">
   <div class="summary-signature">
+    <a href="#t:id_resolvable/0">id_resolvable()</a>
+  </div>
+    <div class="summary-synopsis"><p>  All available types that can be resolved into a user id.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
     <a href="#t:t/0">t()</a>
   </div>
 </div>
@@ -105,6 +111,12 @@ Crux.Structs.User          <a href="https://github.com/SpaceEEC/crux_structs/blo
     <a href="#create/1">create(data)</a>
   </div>
     <div class="summary-synopsis"><p>  Creates a <a href="Crux.Structs.User.html#t:t/0"><code class="inline">Crux.Structs.User.t/0</code></a> struct from raw data.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="#resolve_id/1">resolve_id(resolvable)</a>
+  </div>
+    <div class="summary-synopsis"><p>  Resolves the id of a <a href="Crux.Structs.Guild.html#t:t/0"><code class="inline">Crux.Structs.Guild.t/0</code></a>.</p></div>
 </div>
 <div class="summary-row">
   <div class="summary-signature">
@@ -123,6 +135,33 @@ Crux.Structs.User          <a href="https://github.com/SpaceEEC/crux_structs/blo
             </a>
 Types          </h1>
           <div class="types-list">
+<section class="detail" id="t:id_resolvable/0">
+  <div class="detail-header">
+    <a href="#t:id_resolvable/0" class="detail-link" title="Link to this type">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature">id_resolvable()</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L37" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <span class="note">(since 0.2.1)</span>
+      <div class="specs">
+          <pre>id_resolvable() ::
+  <a href="Crux.Structs.User.html#t:t/0">Crux.Structs.User.t</a>()
+  | <a href="Crux.Structs.Member.html#t:t/0">Crux.Structs.Member.t</a>()
+  | <a href="Crux.Structs.Message.html#t:t/0">Crux.Structs.Message.t</a>()
+  | <a href="Crux.Structs.Presence.html#t:t/0">Crux.Structs.Presence.t</a>()
+  | <a href="Crux.Structs.VoiceState.html#t:t/0">Crux.Structs.VoiceState.t</a>()
+  | <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>()
+  | <a href="https://hexdocs.pm/elixir/String.html#t:t/0">String.t</a>()</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  All available types that can be resolved into a user id.</p>
+  </section>
+</section>
 <section class="detail" id="t:t/0">
   <div class="detail-header">
     <a href="#t:t/0" class="detail-link" title="Link to this type">
@@ -130,7 +169,7 @@ Types          </h1>
       <span class="sr-only">Link to this type</span>
     </a>
     <h1 class="signature">t()</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L23" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L24" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -165,7 +204,7 @@ Functions          </h1>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">create(data)</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L39" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L115" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -180,6 +219,56 @@ Functions          </h1>
 </blockquote>
   </section>
 </section>
+<section class="detail" id="resolve_id/1">
+  <div class="detail-header">
+    <a href="#resolve_id/1" class="detail-link" title="Link to this function">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this function</span>
+    </a>
+    <h1 class="signature">resolve_id(resolvable)</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L85" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <span class="note">(since 0.2.1)</span>
+      <div class="specs">
+          <pre>resolve_id(<a href="#t:id_resolvable/0">id_resolvable</a>()) :: <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>() | nil</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  Resolves the id of a <a href="Crux.Structs.Guild.html#t:t/0"><code class="inline">Crux.Structs.Guild.t/0</code></a>.</p>
+<blockquote><p>Automatically invoked by <a href="Crux.Structs.html#resolve_id/2"><code class="inline">Crux.Structs.resolve_id/2</code></a>.</p>
+</blockquote>
+<pre><code class="nohighlight makeup elixir"><span class="w">  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0316558991-1">%</span><span class="nc" data-group-id="0316558991-1">Crux.Structs.User</span><span class="p" data-group-id="0316558991-1">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0316558991-1">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-2">(</span><span class="p" data-group-id="0316558991-2">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0316558991-3">%</span><span class="nc" data-group-id="0316558991-3">Crux.Structs.Member</span><span class="p" data-group-id="0316558991-3">{</span><span class="ss">user</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0316558991-3">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-4">(</span><span class="p" data-group-id="0316558991-4">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0316558991-5">%</span><span class="nc" data-group-id="0316558991-5">Crux.Structs.Message</span><span class="p" data-group-id="0316558991-5">{</span><span class="ss">author</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0316558991-6">%</span><span class="nc" data-group-id="0316558991-6">Crux.Structs.User</span><span class="p" data-group-id="0316558991-6">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0316558991-6">}</span><span class="p" data-group-id="0316558991-5">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-7">(</span><span class="p" data-group-id="0316558991-7">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0316558991-8">%</span><span class="nc" data-group-id="0316558991-8">Crux.Structs.Presence</span><span class="p" data-group-id="0316558991-8">{</span><span class="ss">user</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0316558991-8">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-9">(</span><span class="p" data-group-id="0316558991-9">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0316558991-10">%</span><span class="nc" data-group-id="0316558991-10">Crux.Structs.VoiceState</span><span class="p" data-group-id="0316558991-10">{</span><span class="ss">user_id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0316558991-10">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-11">(</span><span class="p" data-group-id="0316558991-11">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="mi">218348062828003328</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-12">(</span><span class="p" data-group-id="0316558991-12">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="s">&quot;218348062828003328&quot;</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="0316558991-13">(</span><span class="p" data-group-id="0316558991-13">)</span><span class="w">
+  </span><span class="mi">218348062828003328</span><span class="w">
+</span></code></pre>
+  </section>
+</section>
 <section class="detail" id="to_mention/1">
   <div class="detail-header">
     <a href="#to_mention/1" class="detail-link" title="Link to this function">
@@ -187,7 +276,7 @@ Functions          </h1>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">to_mention(user)</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L60" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/user.ex#L136" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -198,8 +287,8 @@ Functions          </h1>
   </div>
   <section class="docstring">
 <p>  Converts a <a href="Crux.Structs.User.html#t:t/0"><code class="inline">Crux.Structs.User.t/0</code></a> into its discord mention format.</p>
-<pre><code class="nohighlight makeup elixir"><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="2592912052-1">%</span><span class="nc" data-group-id="2592912052-1">Crux.Structs.User</span><span class="p" data-group-id="2592912052-1">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="2592912052-1">}</span><span class="w">
-</span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">to_mention</span><span class="p" data-group-id="2592912052-2">(</span><span class="p" data-group-id="2592912052-2">)</span><span class="w">
+<pre><code class="nohighlight makeup elixir"><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="8381608954-1">%</span><span class="nc" data-group-id="8381608954-1">Crux.Structs.User</span><span class="p" data-group-id="8381608954-1">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="8381608954-1">}</span><span class="w">
+</span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.User</span><span class="o">.</span><span class="n">to_mention</span><span class="p" data-group-id="8381608954-2">(</span><span class="p" data-group-id="8381608954-2">)</span><span class="w">
 </span><span class="s">&quot;&lt;@218348062828003328&gt;&quot;</span><span class="w">
 </span></code></pre>
   </section>
