--- a/Crux.Structs.Guild.html
+++ b/Crux.Structs.Guild.html
@@ -8,7 +8,7 @@
     <meta name="project" content="Crux vdev">
     <title>Crux.Structs.Guild — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-54fe6ae213.js"></script>
+    <script src="dist/sidebar_items-da6452be3a.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
   </head>
@@ -101,6 +101,12 @@ Crux.Structs.Guild          <a href="https://github.com/SpaceEEC/crux_structs/bl
     </h2>
 <div class="summary-row">
   <div class="summary-signature">
+    <a href="#t:id_resolvable/0">id_resolvable()</a>
+  </div>
+    <div class="summary-synopsis"><p>  All available types that can be resolved into a guild id.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
     <a href="#t:t/0">t()</a>
   </div>
 </div>
@@ -115,6 +121,12 @@ Crux.Structs.Guild          <a href="https://github.com/SpaceEEC/crux_structs/bl
   </div>
     <div class="summary-synopsis"><p>  Creates a <code class="inline">t:Crux.Structs.Guild/0</code> struct from raw data.</p></div>
 </div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="#resolve_id/1">resolve_id(resolvable)</a>
+  </div>
+    <div class="summary-synopsis"><p>  Resolves the id of a <a href="Crux.Structs.Guild.html#t:t/0"><code class="inline">Crux.Structs.Guild.t/0</code></a>.</p></div>
+</div>
   </div>
         </section>
 
@@ -126,6 +138,30 @@ Crux.Structs.Guild          <a href="https://github.com/SpaceEEC/crux_structs/bl
             </a>
 Types          </h1>
           <div class="types-list">
+<section class="detail" id="t:id_resolvable/0">
+  <div class="detail-header">
+    <a href="#t:id_resolvable/0" class="detail-link" title="Link to this type">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature">id_resolvable()</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/guild.ex#L110" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <span class="note">(since 0.2.1)</span>
+      <div class="specs">
+          <pre>id_resolvable() ::
+  <a href="Crux.Structs.Guild.html#t:t/0">Crux.Structs.Guild.t</a>()
+  | <a href="Crux.Structs.Channel.html#t:t/0">Crux.Structs.Channel.t</a>()
+  | <a href="Crux.Structs.Message.html#t:t/0">Crux.Structs.Message.t</a>()
+  | <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>()</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  All available types that can be resolved into a guild id.</p>
+  </section>
+</section>
 <section class="detail" id="t:t/0">
   <div class="detail-header">
     <a href="#t:t/0" class="detail-link" title="Link to this type">
@@ -200,7 +236,7 @@ Functions          </h1>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">create(data)</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/guild.ex#L115" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/guild.ex#L176" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -213,6 +249,57 @@ Functions          </h1>
 <p>  Creates a <code class="inline">t:Crux.Structs.Guild/0</code> struct from raw data.</p>
 <blockquote><p>Automatically invoked by <a href="Crux.Structs.html#create/2"><code class="inline">Crux.Structs.create/2</code></a>.</p>
 </blockquote>
+  </section>
+</section>
+<section class="detail" id="resolve_id/1">
+  <div class="detail-header">
+    <a href="#resolve_id/1" class="detail-link" title="Link to this function">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this function</span>
+    </a>
+    <h1 class="signature">resolve_id(resolvable)</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/guild.ex#L153" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <span class="note">(since 0.2.1)</span>
+      <div class="specs">
+          <pre>resolve_id(<a href="#t:id_resolvable/0">id_resolvable</a>()) :: <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>() | nil</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  Resolves the id of a <a href="Crux.Structs.Guild.html#t:t/0"><code class="inline">Crux.Structs.Guild.t/0</code></a>.</p>
+<blockquote><p>Automatically invoked by <a href="Crux.Structs.html#resolve_id/2"><code class="inline">Crux.Structs.resolve_id/2</code></a>.</p>
+</blockquote>
+<pre><code class="nohighlight makeup elixir"><span class="w">  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="6047267185-1">%</span><span class="nc" data-group-id="6047267185-1">Crux.Structs.Guild</span><span class="p" data-group-id="6047267185-1">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">516569101267894284</span><span class="p" data-group-id="6047267185-1">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-2">(</span><span class="p" data-group-id="6047267185-2">)</span><span class="w">
+  </span><span class="mi">516569101267894284</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="6047267185-3">%</span><span class="nc" data-group-id="6047267185-3">Crux.Structs.Channel</span><span class="p" data-group-id="6047267185-3">{</span><span class="ss">guild_id</span><span class="p">:</span><span class="w"> </span><span class="mi">516569101267894284</span><span class="p" data-group-id="6047267185-3">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-4">(</span><span class="p" data-group-id="6047267185-4">)</span><span class="w">
+  </span><span class="mi">516569101267894284</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="6047267185-5">%</span><span class="nc" data-group-id="6047267185-5">Crux.Structs.Message</span><span class="p" data-group-id="6047267185-5">{</span><span class="ss">guild_id</span><span class="p">:</span><span class="w"> </span><span class="mi">516569101267894284</span><span class="p" data-group-id="6047267185-5">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-6">(</span><span class="p" data-group-id="6047267185-6">)</span><span class="w">
+  </span><span class="mi">516569101267894284</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="mi">516569101267894284</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-7">(</span><span class="p" data-group-id="6047267185-7">)</span><span class="w">
+  </span><span class="mi">516569101267894284</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="s">&quot;516569101267894284&quot;</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-8">(</span><span class="p" data-group-id="6047267185-8">)</span><span class="w">
+  </span><span class="mi">516569101267894284</span><span class="w">
+
+  </span><span class="c1"># DMs</span><span class="w">
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="6047267185-9">%</span><span class="nc" data-group-id="6047267185-9">Crux.Structs.Channel</span><span class="p" data-group-id="6047267185-9">{</span><span class="ss">guild_id</span><span class="p">:</span><span class="w"> </span><span class="no">nil</span><span class="p" data-group-id="6047267185-9">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-10">(</span><span class="p" data-group-id="6047267185-10">)</span><span class="w">
+  </span><span class="no">nil</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="6047267185-11">%</span><span class="nc" data-group-id="6047267185-11">Crux.Structs.Message</span><span class="p" data-group-id="6047267185-11">{</span><span class="ss">guild_id</span><span class="p">:</span><span class="w"> </span><span class="no">nil</span><span class="p" data-group-id="6047267185-11">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Guild</span><span class="o">.</span><span class="n">resolve_id</span><span class="p" data-group-id="6047267185-12">(</span><span class="p" data-group-id="6047267185-12">)</span><span class="w">
+  </span><span class="no">nil</span><span class="w">
+</span></code></pre>
   </section>
 </section>
           </div>
