--- a/Crux.Structs.Overwrite.html
+++ b/Crux.Structs.Overwrite.html
@@ -8,7 +8,7 @@
     <meta name="project" content="Crux vdev">
     <title>Crux.Structs.Overwrite — Crux vdev</title>
     <link rel="stylesheet" href="dist/html-78f1ba308158a498a5a4.css" />
-    <script src="dist/sidebar_items-54fe6ae213.js"></script>
+    <script src="dist/sidebar_items-da6452be3a.js"></script>
       <script src="docs_config.js"></script>
     <script async src="dist/html-78f1ba308158a498a5a4.js"></script>
   </head>
@@ -95,6 +95,12 @@ Crux.Structs.Overwrite          <a href="https://github.com/SpaceEEC/crux_struct
     <a href="#t:t/0">t()</a>
   </div>
 </div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="#t:target_resolvable/0">target_resolvable()</a>
+  </div>
+    <div class="summary-synopsis"><p>  All available types that can be resolved into a target for a permission overwrite</p></div>
+</div>
   </div>
   <div class="summary-functions summary">
     <h2>
@@ -105,6 +111,12 @@ Crux.Structs.Overwrite          <a href="https://github.com/SpaceEEC/crux_struct
     <a href="#create/1">create(data)</a>
   </div>
     <div class="summary-synopsis"><p>  Creates a <a href="Crux.Structs.Overwrite.html#t:t/0"><code class="inline">Crux.Structs.Overwrite.t/0</code></a> struct from raw data.</p></div>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="#resolve_target/1">resolve_target(resolvable)</a>
+  </div>
+    <div class="summary-synopsis"><p>  Resolves a <a href="#t:target_resolvable/0"><code class="inline">target_resolvable/0</code></a> into an overwrite target.</p></div>
 </div>
   </div>
         </section>
@@ -124,7 +136,7 @@ Types          </h1>
       <span class="sr-only">Link to this type</span>
     </a>
     <h1 class="signature">t()</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L22" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L23" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -139,6 +151,29 @@ Types          </h1>
       </div>
   </div>
   <section class="docstring">
+  </section>
+</section>
+<section class="detail" id="t:target_resolvable/0">
+  <div class="detail-header">
+    <a href="#t:target_resolvable/0" class="detail-link" title="Link to this type">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature">target_resolvable()</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L34" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <span class="note">(since 0.2.1)</span>
+      <div class="specs">
+          <pre>target_resolvable() ::
+  <a href="Crux.Structs.Overwrite.html#t:t/0">Crux.Structs.Overwrite.t</a>()
+  | <a href="Crux.Structs.Role.html#t:t/0">Crux.Structs.Role.t</a>()
+  | <a href="Crux.Structs.User.html#t:id_resolvable/0">Crux.Structs.User.id_resolvable</a>()</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  All available types that can be resolved into a target for a permission overwrite</p>
   </section>
 </section>
           </div>
@@ -158,7 +193,7 @@ Functions          </h1>
       <span class="sr-only">Link to this function</span>
     </a>
     <h1 class="signature">create(data)</span>
-      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L37" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L102" class="view-source" rel="help" title="View Source">
        <span class="icon-code" aria-hidden="true"></span>
        <span class="sr-only">View Source</span>
      </a>
@@ -171,6 +206,69 @@ Functions          </h1>
 <p>  Creates a <a href="Crux.Structs.Overwrite.html#t:t/0"><code class="inline">Crux.Structs.Overwrite.t/0</code></a> struct from raw data.</p>
 <blockquote><p>Automatically invoked by <a href="Crux.Structs.html#create/2"><code class="inline">Crux.Structs.create/2</code></a>.</p>
 </blockquote>
+  </section>
+</section>
+<section class="detail" id="resolve_target/1">
+  <div class="detail-header">
+    <a href="#resolve_target/1" class="detail-link" title="Link to this function">
+      <span class="icon-link" aria-hidden="true"></span>
+      <span class="sr-only">Link to this function</span>
+    </a>
+    <h1 class="signature">resolve_target(resolvable)</span>
+      <a href="https://github.com/SpaceEEC/crux_structs/blob/master/lib/structs/overwrite.ex#L83" class="view-source" rel="help" title="View Source">
+       <span class="icon-code" aria-hidden="true"></span>
+       <span class="sr-only">View Source</span>
+     </a>
+      <div class="specs">
+          <pre>resolve_target(<a href="#t:target_resolvable/0">target_resolvable</a>()) ::
+  {<a href="https://hexdocs.pm/elixir/String.html#t:t/0">String.t</a>() | :unknown, <a href="Crux.Structs.Snowflake.html#t:t/0">Crux.Structs.Snowflake.t</a>()}</pre>
+      </div>
+  </div>
+  <section class="docstring">
+<p>  Resolves a <a href="#t:target_resolvable/0"><code class="inline">target_resolvable/0</code></a> into an overwrite target.</p>
+<blockquote><p>Note that an id or string of it returns <code class="inline">:unknown</code> as type.</p>
+</blockquote>
+<h2 id="resolve_target/1-examples" class="section-heading">
+  <a href="#resolve_target/1-examples" class="hover-link"><span class="icon-link" aria-hidden="true"></span></a>
+  Examples
+</h2>
+
+<pre><code class="nohighlight makeup elixir"><span class="w">  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-1">%</span><span class="nc" data-group-id="0618029229-1">Crux.Structs.Overwrite</span><span class="p" data-group-id="0618029229-1">{</span><span class="ss">type</span><span class="p">:</span><span class="w"> </span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-1">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-2">(</span><span class="p" data-group-id="0618029229-2">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-3">{</span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-3">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-4">%</span><span class="nc" data-group-id="0618029229-4">Crux.Structs.Role</span><span class="p" data-group-id="0618029229-4">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">376146940762783746</span><span class="p" data-group-id="0618029229-4">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-5">(</span><span class="p" data-group-id="0618029229-5">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-6">{</span><span class="s">&quot;role&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">376146940762783746</span><span class="p" data-group-id="0618029229-6">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-7">%</span><span class="nc" data-group-id="0618029229-7">Crux.Structs.User</span><span class="p" data-group-id="0618029229-7">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-7">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-8">(</span><span class="p" data-group-id="0618029229-8">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-9">{</span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-9">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-10">%</span><span class="nc" data-group-id="0618029229-10">Crux.Structs.Member</span><span class="p" data-group-id="0618029229-10">{</span><span class="ss">user</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-10">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-11">(</span><span class="p" data-group-id="0618029229-11">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-12">{</span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-12">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-13">%</span><span class="nc" data-group-id="0618029229-13">Crux.Structs.Message</span><span class="p" data-group-id="0618029229-13">{</span><span class="ss">author</span><span class="p">:</span><span class="w"> </span><span class="p" data-group-id="0618029229-14">%</span><span class="nc" data-group-id="0618029229-14">Crux.Structs.User</span><span class="p" data-group-id="0618029229-14">{</span><span class="ss">id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-14">}</span><span class="p" data-group-id="0618029229-13">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-15">(</span><span class="p" data-group-id="0618029229-15">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-16">{</span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-16">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="p" data-group-id="0618029229-17">%</span><span class="nc" data-group-id="0618029229-17">Crux.Structs.VoiceState</span><span class="p" data-group-id="0618029229-17">{</span><span class="ss">user_id</span><span class="p">:</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-17">}</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-18">(</span><span class="p" data-group-id="0618029229-18">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-19">{</span><span class="s">&quot;member&quot;</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-19">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="mi">218348062828003328</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-20">(</span><span class="p" data-group-id="0618029229-20">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-21">{</span><span class="ss">:unknown</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-21">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="s">&quot;218348062828003328&quot;</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-22">(</span><span class="p" data-group-id="0618029229-22">)</span><span class="w">
+  </span><span class="p" data-group-id="0618029229-23">{</span><span class="ss">:unknown</span><span class="p">,</span><span class="w"> </span><span class="mi">218348062828003328</span><span class="p" data-group-id="0618029229-23">}</span><span class="w">
+
+  </span><span class="gp unselectable">iex&gt; </span><span class="no">nil</span><span class="w">
+  </span><span class="gp unselectable">...&gt; </span><span class="o">|&gt;</span><span class="w"> </span><span class="nc">Crux.Structs.Overwrite</span><span class="o">.</span><span class="n">resolve_target</span><span class="p" data-group-id="0618029229-24">(</span><span class="p" data-group-id="0618029229-24">)</span><span class="w">
+  </span><span class="no">nil</span><span class="w">
+</span></code></pre>
   </section>
 </section>
           </div>
